[tool.poetry]
name = "pandas-web-scraping"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.3"
html5lib = "^1.1"
beautifulsoup4 = "^4.9.3"
pandas = "^1.2.3"
openpyxl = "^3.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
